# resonanse

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: pipeline.yml
backend_py/: app.py  main.py  readme.md  requirements.txt
backend_py/db/: __init__.py  account.py  base.py  community.py  event.py
backend_py/models/: account.py  community.py  event.py
backend_py/services/: __init__.py  accounts.py  auth.py  communities.py  events.py  middlewares.py  resources.py
backend_py/tests/: all.py  test_generated.py
capybara_service/: kudago_api.py  main.py  models.py
db_init/: accounts.sql  bot_statistics.sql  deleted_events.sql  event_tg_table.sql  events.sql  likes.sql  user_statistics.sql
docs/insomnia/: Insomnia_2023-10-15.json
landing/resonanse.ru/public/resources/: resonanse-app.webflow.14b0a124a.css  webflow.ffb7ff4aa.js
migrations/: 1_add_contact_info.sql  2_alter_events_for_new_filling.sql
recsys/jupyter/: dssm_test_1.ipynb  dssm_test_2.ipynb  meetup_data.ipynb  meetup_data_2.ipynb  metrics_table_1.md  minilm_384d_embeddings_amsterdam.npy
resonanse_backend/: Cargo.toml
resonanse_backend/src/: main.rs
resonanse_backend/src/services/accounts/: mod.rs
resonanse_bot/: Cargo.toml  build.rs
resonanse_bot/locales/: translations.json
resonanse_bot/src/: commands.rs  config.rs  dispatch.rs  errors.rs  keyboards.rs  main.rs  states.rs  user_settings.rs  utils.rs
resonanse_bot/src/actions/: create_event.rs  mod.rs
resonanse_bot/src/data_structs/: complex_command.rs  create_event.rs  event_repr.rs  filling_event.rs  mod.rs
resonanse_bot/src/data_translators/: mod.rs
resonanse_bot/src/external_api/: mod.rs
resonanse_bot/src/handlers/: base.rs  commands.rs  common.rs  middlewares.rs  mod.rs  utils.rs
resonanse_bot/src/handlers/actions/: create_event.rs  create_event_old.rs  create_event_v2.rs  get_digest.rs  get_event_by_uuid.rs  get_events.rs  mod.rs  score_event.rs  send_feedback.rs  update_user_fields.rs
resonanse_bot/src/high_logics/: mod.rs
resonanse_bot/src/management/: actions.rs  commands.rs  common.rs  dispatch.rs  mod.rs
resonanse_common/: Cargo.toml
resonanse_common/src/: i18n.rs  lib.rs  utils.rs
resonanse_common/src/clients/: error.rs  mod.rs  recommendation_service.rs  response_consumer.rs
resonanse_common/src/configuration/: mod.rs
resonanse_common/src/file_storage/: mod.rs
resonanse_common/src/models/: accounts.rs  clickhouse.rs  event_scores.rs  events.rs  mod.rs  recommendations.rs
resonanse_common/src/repository/: accounts.rs  event_scores.rs  events.rs  mod.rs  user.rs
src/: main.rs
src/models/: accounts.rs  events.rs  mod.rs
src/services/accounts/: mod.rs
tg_web_ui/: index.html  script.js  styles.css
tg_web_ui_2/: mini_serv.py  package-lock.json  package.json
tg_web_ui_2/app_build/: asset-manifest.json  index.html
tg_web_ui_2/app_build/static/css/: main.f94ddcff.css  main.f94ddcff.css.map
tg_web_ui_2/app_build/static/js/: main.044906df.js  main.044906df.js.map  main.b7aa58c8.js  main.b7aa58c8.js.map  main.c6650433.js  main.c6650433.js.map
tg_web_ui_2/public/: index.html
tg_web_ui_2/src/: App.js  index.css
tg_web_ui_2/src/api/: service.js
tg_web_ui_2/src/components/good/: good.jsx
tg_web_ui_2/src/components/helpers/: back.jsx
tg_web_ui_2/src/components/helpers/loader/: loader.jsx
tg_web_ui_2/src/components/main/: main.jsx
web/resonanse.ru/public/: index.html
web/resonanse.ru/public/resources/: css
web/resonanse.ru/public/test_web_app/: 366.js  366.js.map  composeApp.js  composeApp.js.map
