[package]
name = "resonanse_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"
uuid = "1.4.1"
tower = "0.4.13"
axum = "0.6.20"
sqlx = "0.7.2"
jwt = "0.16.0"
#tracing = "0.1.39"
