[package]
name = "resonanse_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
chrono = "0.4"
uuid = "1.4"
chrono-tz = "0.8"
reqwest = "0.11"
rust-i18n = "2.3"
serde_json = "1.0"
serde = "1.0"
url = "2.4"
clickhouse = "0.11"

resonanse_common = { path = "../resonanse_common" }
