[package]
name = "resonanse_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["stream"] }
rust-i18n = "2.3"
serde_json = "1.0"
serde = "1.0"
url = "2.4"
clickhouse = "0.11"
futures = "0.3.28"
image = "0.25.1"

resonanse_common = { path = "../resonanse_common" }
