[package]
name = "resonanse_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
sqlx = { version = "0.7", features = ["macros", "postgres", "runtime-tokio", "time", "uuid", "chrono"] }
chrono = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
log = "0.4"
url = "2.4"
strum = "0.25"
strum_macros = "0.25"
serde_json = "1.0"
clickhouse = "0.11"
amqprs = "1.6"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.33.0"
async-trait = "0.1.74"
